--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ body, html
 }
 
 
-@media screen and (min-width: 301px) and (max-width:600) {
+@media screen and (min-width: 301px) and (max-width:600px) {
     .about h5 {
         width: 42%;
         padding: 2%;
