--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,52 @@ custom fonts
     padding: 1%;
 }
 
+.myHighlight-2 {
+    font-size: 1.2em;
+    background: #ffd600;
+    color: #e65100 !important;
+    padding: 5%;
+}
+
+.myHighlight-3 {
+    background: #ffd600;
+    color: #e65100 !important;
+    text-transform: none;
+    padding: 2%;
+}
+
+.myHighlight-4 {
+    background: #ffd600;
+    color: #e65100 !important;
+    text-transform: uppercase;
+    padding: 0.3em;
+}
+
 .myCard {
     margin-bottom: 0;
     margin-top: 0;
 }
+
+.myProgress {
+    position: relative;
+    height: 10px;
+    display: block;
+    width: 85%;
+    background-color: #acece6;
+    border-radius: 2px;
+    margin: 1rem 0rem 1rem 4rem;
+    overflow: hidden;
+}
+
+.web-dev-progress-color {
+    background: #fb8c00 !important;
+}
+
+.prog-lang-progress-color {
+    background: #8bc34a !important;
+}
+
+
 
 body, html
 {
@@ -126,6 +168,29 @@ body, html
     padding: 1%;
     text-align: left;
 }
+
+.tools-name {
+    display: inline-block;
+}
+
+.tools-progess {
+    display: inline-block;
+}
+
+.interests {
+    text-align: left !important;
+    display: block;
+}
+
+.interests h5 {
+    text-align: left;
+    width: 14%;
+    padding: 1%;
+}
+
+/*
+Media queries
+*/
 
 @media screen and (min-width: 992px) {
 
