--- a/css/style.css
+++ b/css/style.css
@@ -61,14 +61,8 @@ custom fonts
 }
 
 .myProgress {
-    position: relative;
     height: 10px;
-    display: block;
-    width: 85%;
-    background-color: #acece6;
-    border-radius: 2px;
     margin: 1rem 0rem 1rem 4rem;
-    overflow: hidden;
 }
 
 .web-dev-progress-color {
@@ -221,7 +215,13 @@ Media queries
         width: 20%;
         padding: 2%;
   }
+  
+  .myProgress {
+      height: 10px;
+      margin: 1rem 0rem 1rem 2rem;
+  }
 }
+
 
 
 @media screen and (min-width: 301px) and (max-width:600px) {
@@ -238,7 +238,14 @@ Media queries
         width: 35%;
         padding: 2%;
   }
+
+  .myProgress {
+      height: 10px;
+      margin: 1rem 0rem 1rem 1rem;
+  }
 }
+
+
 
 @media screen and (max-width: 300px) {
 
@@ -255,5 +262,9 @@ Media queries
     .projects h5{
         width: 36%;
       padding: 2%;
+  }
+
+  .myProgress {
+      height: 10px;
   }
 }
