--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ body, html
 .projects h5 {
     width: 18%;
     padding: 1%;
-    text-align: left;
+    text-align: center;;
 }
 
 .tools-name {
@@ -180,6 +180,7 @@ body, html
     text-align: left;
     width: 14%;
     padding: 1%;
+    text-align: center;
 }
 
 /*
@@ -215,7 +216,7 @@ Media queries
         width: 20%;
         padding: 2%;
   }
-  
+
   .myProgress {
       height: 10px;
       margin: 1rem 0rem 1rem 2rem;
