--- a/projects/weather-app/main.css
+++ b/projects/weather-app/main.css
@@ -1,88 +1,74 @@
-/* Styles go here */
-
 body {
-    padding: 0;
-    margin: 0;
-    font-family: Helvetica Neue, Helvetica, Arial;
-}
-
-header {
-    height: 100px;
-    background-color: lightblue;
+    background-color: #fff65b;
+    color: #2c3e50;
     text-align: center;
-    padding-top: 20px;
-    box-shadow: 3px 3px 3px #ccc;
+    padding-top: 2%;
+    font-family: 'Arima Madurai', cursive;
 }
 
-header h1 {
-    font-size: 40px;
-    font-weight: bold;
-    color: dodgerblue;
+h1 {
+    font-size: 4em;
+    margin-bottom: -10px;
+}
+
+#input-box {
+    height: 55px;
+    width: 40%;
     margin: 0;
-}
-
-.main {
-    text-align: center;
-    padding-top: 80px;
-}
-
-#search {
+    font-family: sans-serif;
     font-size: 18px;
+    box-shadow: none;
+    border-radius: none;
+    width: 20em;
+    font-size: 1.5em;
+    border: solid 3px #2c3e50;
+    padding: 5px;
+    color: #2980b9;
 }
 
-#search label {
+#search-btn {
+    border-radius: 50%;
+    background-color: #2c3e50;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bolder;
+    font-size: 1.5em;
+    padding: 2%; 
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    margin-left : 5px;
+    -webkit-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
+}
+
+p.help {
+    font-size: 1.3em;
+    font-weight: bolder;
+    color: #2c3e50;
+    margin-bottom: -25px;
+}
+
+#weather-box {
+    color: #000;
+    font-weight: bolder;
+    font-size: 1.2em;
+}
+
+#city-name {
+    color: #2980b9;
+    font-size: 2em;
+    margin-bottom: -10px;
+}
+
+#realTemp {
+    font-size: 2.5em;
+    font-weight: bolder;
+    margin-bottom: -10px;
+}
+
+footer a {
+    font-size: 0.8em;
     font-weight: bold;
-}
-
-#search input {
-    font-size: inherit;
-    font-family: inherit;
-}
-
-#search button {
-    font-family: inherit;
-    font-size: inherit;
-    background-color: dodgerblue;
-    border: 1px solid dodgerblue;
-    border-radius: 3px;
-    cursor: pointer;
-    color: white;
-}
-
-#search button:hover {
-    background-color: deepskyblue;
-}
-
-#weather {
-    padding: 30px;
-    border: 1px solid #ccc;
-    width: 500px;
-    margin:  0 auto;
-    background-color: deepskyblue;
-    box-shadow: 2px 2px 3px #ccc;
-    color: white;
-    box-sizing: border-box;
-    display: none;
-    font-weight: bold;
-}
-
-#weather h1 {
-    font-size: 32px;
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-
-#weatherDescription {
-    float: left;
-}
-
-#weatherTemperature {
-    float: right;
-}
-
-#load {
-    padding: 30px;
-    width: 500px;
-    margin: 0 auto;
-    display: none;
+    color: #c0392b;
 }
