--- a/projects/weather-app/main.css
+++ b/projects/weather-app/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fff65b;
+    background-color: #ecf0f1;
     color: #2c3e50;
     text-align: center;
     padding-top: 2%;
