--- a/projects/weather-app/main.css
+++ b/projects/weather-app/main.css
@@ -20,7 +20,7 @@ h1 {
     font-size: 18px;
     box-shadow: none;
     border-radius: none;
-    width: 20em;
+    width: 50%;
     font-size: 1.5em;
     border: solid 3px #2c3e50;
     padding: 5px;
