--- a/projects/weather-app/main.css
+++ b/projects/weather-app/main.css
@@ -1,76 +1,157 @@
-/*main css file*/
-body {
-    background-color: #ecf0f1;    
-    color: #2c3e50;
-    text-align: center;
-    padding-top: 2%;
-    font-family: 'Arima Madurai', cursive;
+@media only screen and (min-width: 721px){
+    /*main css file*/
+    body {
+        background-color: #ecf0f1;    
+        color: #2c3e50;
+        text-align: center;
+        padding-top: 2%;
+        font-family: 'Arima Madurai', cursive;
+    }
+
+    h1 {
+        font-size: 4em;
+        margin-bottom: -20px;
+    }
+    
+    p.help {
+        font-size: 1.3em;
+        font-weight: bolder;
+        color: #2c3e50;
+        margin-bottom: 5%;
+    }
+
+    #input-box {
+        height: 55px;
+        margin: 0;
+        font-family: sans-serif;
+        font-size: 18px;
+        box-shadow: none;
+        border-radius: none;
+        width: 60%;
+        font-size: 1.5em;
+        border: solid 3px #2c3e50;
+        padding: 5px;
+        color: #2980b9;
+    }
+
+    #search-btn {
+        border-radius: 50%;
+        background-color: #2c3e50;
+        color: #fff;
+        text-decoration: none;
+        font-weight: bolder;
+        font-size: 1.5em;
+        padding: 2%; 
+        padding-left: 2.5%;
+        padding-right: 2.5%;
+        margin-left : 5px;
+        -webkit-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
+    }
+
+    #weather-box {
+        color: #000;
+        font-weight: bolder;
+        font-size: 1.2em;
+        display: none;
+    }
+
+    #city-name {
+        color: #2980b9;
+        font-size: 2em;
+        margin-bottom: -10px;
+    }
+
+    #realTemp {
+        font-size: 2.5em;
+        font-weight: bolder;
+        margin-bottom: -10px;
+    }
+
+    footer a {
+        font-size: 0.8em;
+        font-weight: bold;
+        color: #c0392b;
+    }
+
 }
 
-h1 {
-    font-size: 4em;
-    margin-bottom: -10px;
-}
+@media only screen and (max-width: 720px){
+    /*main css file*/
+    body {
+        background-color: #ecf0f1;    
+        color: #2c3e50;
+        text-align: center;
+        padding-top: 2%;
+        font-family: 'Arima Madurai', cursive;
+    }
 
-#input-box {
-    height: 55px;
-    width: 40%;
-    margin: 0;
-    font-family: sans-serif;
-    font-size: 18px;
-    box-shadow: none;
-    border-radius: none;
-    width: 50%;
-    font-size: 1.5em;
-    border: solid 3px #2c3e50;
-    padding: 5px;
-    color: #2980b9;
-}
+    h1 {
+        font-size: 4em;
+        margin-bottom: -10px;
+    }
 
-#search-btn {
-    border-radius: 50%;
-    background-color: #2c3e50;
-    color: #fff;
-    text-decoration: none;
-    font-weight: bolder;
-    font-size: 1.5em;
-    padding: 2%; 
-    padding-left: 2.5%;
-    padding-right: 2.5%;
-    margin-left : 5px;
-    -webkit-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
-}
+    #input-box {
+        display: block;
+        height: 55px;
+        margin: 0;
+        font-family: sans-serif;
+        font-size: 18px;
+        box-shadow: none;
+        border-radius: none;
+        width: 90%;
+        font-size: 1.5em;
+        border: solid 3px #2c3e50;
+        padding: 5px;
+        color: #2980b9;
+        margin-bottom: 7%;
+    }
 
-p.help {
-    font-size: 1.3em;
-    font-weight: bolder;
-    color: #2c3e50;
-    margin-bottom: -25px;
-}
+    #search-btn {
+        border-radius: 50%;
+        background-color: #2c3e50;
+        color: #fff;
+        text-decoration: none;
+        font-weight: bolder;
+        font-size: 1.5em;
+        padding: 2%; 
+        padding-left: 2.5%;
+        padding-right: 2.5%;
+        -webkit-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
+    }
 
-#weather-box {
-    color: #000;
-    font-weight: bolder;
-    font-size: 1.2em;
-    display: none;
-}
+    p.help {
+        font-size: 1.3em;
+        font-weight: bolder;
+        color: #2c3e50;
+    }
 
-#city-name {
-    color: #2980b9;
-    font-size: 2em;
-    margin-bottom: -10px;
-}
+    #weather-box {
+        color: #000;
+        font-weight: bolder;
+        font-size: 1.2em;
+        display: none;
+    }
 
-#realTemp {
-    font-size: 2.5em;
-    font-weight: bolder;
-    margin-bottom: -10px;
-}
+    #city-name {
+        color: #2980b9;
+        font-size: 2em;
+        margin-bottom: -10px;
+    }
 
-footer a {
-    font-size: 0.8em;
-    font-weight: bold;
-    color: #c0392b;
+    #realTemp {
+        font-size: 2.5em;
+        font-weight: bolder;
+        margin-bottom: -10px;
+    }
+
+    footer a {
+        font-size: 0.8em;
+        font-weight: bold;
+        color: #c0392b;
+    }
+
 }
