--- a/projects/weather-app/main.css
+++ b/projects/weather-app/main.css
@@ -20,6 +20,12 @@
         margin-bottom: 5%;
     }
 
+    p.hint {
+        font-size: 0.9em;
+        color: #2c3e50;
+        font-weight: bold;
+    }
+
     #input-box {
         height: 55px;
         margin: 0;
@@ -66,7 +72,7 @@
     }
 
     #realTemp {
-        font-size: 2.5em;
+        font-size: 3em;
         font-weight: bolder;
         margin-bottom: -10px;
     }
@@ -133,6 +139,13 @@
         color: #2c3e50;
     }
 
+    
+    p.hint {
+        font-size: 0.9em;
+        color: #2c3e50;
+        font-weight: bolder;
+    }
+
     #weather-box {
         color: #000;
         font-weight: bolder;
@@ -147,7 +160,7 @@
     }
 
     #realTemp {
-        font-size: 2.5em;
+        font-size: 3em;
         font-weight: bolder;
         margin-bottom: -10px;
     }
