--- a/projects/weather-app/main.css
+++ b/projects/weather-app/main.css
@@ -17,13 +17,21 @@
         font-size: 1.3em;
         font-weight: bolder;
         color: #2c3e50;
-        margin-bottom: 5%;
+        margin-bottom: 2%;
     }
 
     p.hint {
         font-size: 0.9em;
         color: #2c3e50;
         font-weight: bold;
+    }
+
+    #img-tag {
+        width: 40px;
+        display: none;
+        height: 40px;
+        margin: 0 auto;
+        margin-top: 40px;
     }
 
     #input-box {
@@ -100,6 +108,27 @@
         margin-bottom: -35px;
     }
 
+        #img-tag {
+        width: 40px;
+        display: none;
+        height: 40px;
+        margin: 0 auto;
+        margin-top: 40px;
+    }
+
+    p.help {
+        font-size: 1.3em;
+        font-weight: bolder;
+        color: #2c3e50;
+    }
+
+    
+    p.hint {
+        font-size: 0.9em;
+        color: #2c3e50;
+        font-weight: bolder;
+    }   
+
     #input-box {
         display: block;
         height: 55px;
@@ -133,18 +162,6 @@
         box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.75);
     }
 
-    p.help {
-        font-size: 1.3em;
-        font-weight: bolder;
-        color: #2c3e50;
-    }
-
-    
-    p.hint {
-        font-size: 0.9em;
-        color: #2c3e50;
-        font-weight: bolder;
-    }
 
     #weather-box {
         color: #000;
