--- a/projects/weather-app/css/main.css
+++ b/projects/weather-app/css/main.css
@@ -10,6 +10,7 @@
 
     h1 {
         font-size: 4em;
+        margin-top: -10px;
         margin-bottom: -20px;
     }
     
@@ -113,6 +114,7 @@
 
     h1 {
         font-size: 3em;
+        margin-top: -10px;
         margin-bottom: -35px;
     }
 
