--- a/projects/weather-app/css/main.css
+++ b/projects/weather-app/css/main.css
@@ -138,12 +138,15 @@
 
     p #help {
         font-size: 1em;
+        color: #2980b9;
     }
 
     p.hint {
         font-size: 0.9em;
         color: #2c3e50;
         font-weight: bolder;
+        min-height: 70px;
+        margin-bottom: -5px;
     }   
 
     #input-box {
