--- a/projects/weather-app/css/main.css
+++ b/projects/weather-app/css/main.css
@@ -27,6 +27,7 @@
 
     p #help {
         font-size: 1.3em;
+        color: #2980b9;
     }
 
     p.hint {
@@ -130,6 +131,7 @@
         font-size: 1.3em;
         font-weight: bolder;
         color: #2c3e50;
+        min-height: 70px;        
     }
     
     .typed-cursor {
@@ -137,16 +139,14 @@
     }
 
     p #help {
-        font-size: 1em;
         color: #2980b9;
+        font-size: 1em;
     }
 
     p.hint {
         font-size: 0.9em;
         color: #2c3e50;
         font-weight: bolder;
-        min-height: 70px;
-        margin-bottom: -5px;
     }   
 
     #input-box {
